# CMakeSample

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/dependOn3rdParty/: CMakeLists.txt  main.cpp
app/dependOnLib/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  libA.cmake
lib/libA/: CMakeLists.txt  libAheader.h  libAsrc.cpp
